tests/NormalTests/paczka1/small_fuzzy/39523360.err
Error in line 2: xtFvaFxGM1v S962 9,9
Error in line 8: zFy&ZagdSeJ S551 238,1
Error in line 4: xtFvaFxGM1v S123 84,4
Error in line 5: 2ALn A638 91,8
Error in line 7: zFy4ZagdSeJ S551 49,3
